Fix tooltip shifting neighboring elements bug

--- a/client/components/tooltip/style.scss
+++ b/client/components/tooltip/style.scss
@@ -3,6 +3,11 @@
 		// ensures that the element needed for position calculations isn't included in the DOM layout
 		display: contents;
 
+		// fixes a UI bug where the tooltip can shift neighboring elements when it appears
+		> div {
+			display: inline;
+		}
+
 		// Styles for buttonIcon
 		[role='button'] {
 			cursor: pointer;
